[workspace]
members = [
    "bencher",
    "cli",
    "error",
    "fuzz/*",
    "harness",
    "programs/*",
    "result",
    "test-programs/*",
]
resolver = "2"

[workspace.package]
authors = ["Anza Technology Maintainers <maintainers@anza.xyz>"]
repository = "https://github.com/anza-xyz/mollusk"
readme = "README.md"
license-file = "LICENSE"
edition = "2021"
version = "0.12.0"

[workspace.dependencies]
agave-feature-set = "3.1.0"
agave-precompiles = "3.1.0"
agave-syscalls = "3.1.0"
bincode = "1.3.3"
bs58 = "0.5.1"
chrono = "0.4.44"
clap = "4.5.60"
criterion = "0.8.2"
hex = "0.4.3"
ed25519-dalek = "=2.1.1"
libsecp256k1 = "0.7.2"
mollusk-svm = { path = "harness", version = "0.12.0" }
mollusk-svm-bencher = { path = "bencher", version = "0.12.0" }
mollusk-svm-cli = { path = "cli", version = "0.12.0" }
mollusk-svm-error = { path = "error", version = "0.12.0" }
mollusk-svm-fuzz-fixture = { path = "fuzz/fixture", version = "0.12.0" }
mollusk-svm-fuzz-fixture-firedancer = { path = "fuzz/fixture-fd", version = "0.12.0" }
mollusk-svm-fuzz-fs = { path = "fuzz/fs", version = "0.12.0" }
mollusk-svm-programs-memo = { path = "programs/memo", version = "0.12.0" }
mollusk-svm-result = { path = "result", version = "0.12.0" }
mollusk-svm-programs-token = { path = "programs/token", version = "0.12.0" }
num-format = "0.4.4"
openssl = "0.10.76"
prost = "0.14"
prost-build = "0.14"
prost-types = "0.14"
rand0-7 = { package = "rand", version = "0.7" }
rayon = "1.10.0"
serde = "1.0.203"
serde_json = "1.0.149"
serde_yaml = "0.9.34"
serial_test = "2.0"
sha2 = "0.10.9"
solana-account = "3.2.0"
solana-account-info = "3.1"
solana-bpf-loader-program = "3.1.0"
solana-clock = "3.0"
solana-compute-budget = "3.1.0"
solana-compute-budget-program = "3.1.0"
solana-cpi = "3.1"
solana-ed25519-program = "3.0"
solana-epoch-rewards = "3.0"
solana-epoch-schedule = "3.0"
solana-fee-calculator = "3.0.0"
solana-hash = "3.1.0"
solana-instruction = "3.1"
solana-instruction-error = { version = "2.0", features = ["serde"] }
solana-instructions-sysvar = "3.0"
solana-keccak-hasher = { version = "3.1", features = ["sha3"] }
solana-loader-v3-interface = "6.1.0"
solana-loader-v4-interface = "3.1.0"
solana-loader-v4-program = "3.1.0"
solana-logger = "3.0"
solana-message = "3.0.1"
solana-msg = "3.0.0"
solana-native-token = "3.0"
solana-precompile-error = "3.0"
solana-program-entrypoint = "3.1.0"
solana-program-error = "3.0"
solana-program-pack = "3.0"
solana-program-runtime = "3.1"
solana-pubkey = "4.0"
solana-rent = "3.0"
solana-sdk-ids = "3.1"
solana-secp256k1-program = "3.0"
solana-secp256r1-program = "3.0"
solana-slot-hashes = "3.0"
solana-stake-interface = "2.0.1"
solana-svm-callback = "3.1.0"
solana-svm-log-collector = "3.1.0"
solana-svm-timings = "3.1.0"
solana-svm-transaction = "3.1"
solana-system-interface = "2.0"
solana-system-program = "3.1.0"
solana-sysvar = "3.1"
solana-sysvar-id = "3.1"
solana-transaction-context = "3.1.0"
solana-transaction-error = "3.0.0"
solana-transaction-status-client-types = "3.1.4"
solana-vote-program = "3.1.0"
solana-zk-elgamal-proof-program = "3.1.0"
spl-associated-token-account-interface = "2.0.0"
spl-token-interface = "2.0.0"
thiserror = "2.0.17"
tokio = "1.51.0"

[patch.crates-io]
agave-feature-set = { path = "/home/sol/salsa-i-hate-sigverify/feature-set" }
agave-syscalls = { path = "/home/sol/salsa-i-hate-sigverify/syscalls" }
solana-bpf-loader-program = { path = "/home/sol/salsa-i-hate-sigverify/programs/bpf_loader" }
solana-compute-budget = { path = "/home/sol/salsa-i-hate-sigverify/compute-budget" }
solana-compute-budget-program = { path = "/home/sol/salsa-i-hate-sigverify/programs/compute-budget" }
solana-curve25519 = { path = "/home/sol/salsa-i-hate-sigverify/curves/curve25519" }
solana-loader-v4-program = { path = "/home/sol/salsa-i-hate-sigverify/programs/loader-v4" }
solana-poseidon = { path = "/home/sol/salsa-i-hate-sigverify/poseidon" }
solana-program-runtime = { path = "/home/sol/salsa-i-hate-sigverify/program-runtime" }
solana-svm-callback = { path = "/home/sol/salsa-i-hate-sigverify/svm-callback" }
solana-svm-feature-set = { path = "/home/sol/salsa-i-hate-sigverify/svm-feature-set" }
solana-svm-log-collector = { path = "/home/sol/salsa-i-hate-sigverify/svm-log-collector" }
solana-svm-measure = { path = "/home/sol/salsa-i-hate-sigverify/svm-measure" }
solana-svm-timings = { path = "/home/sol/salsa-i-hate-sigverify/svm-timings" }
solana-svm-transaction = { path = "/home/sol/salsa-i-hate-sigverify/svm-transaction" }
solana-svm-type-overrides = { path = "/home/sol/salsa-i-hate-sigverify/svm-type-overrides" }
solana-transaction-context = { path = "/home/sol/salsa-i-hate-sigverify/transaction-context" }
solana-vote-program = { path = "/home/sol/salsa-i-hate-sigverify/programs/vote" }
solana-zk-elgamal-proof-program = { path = "/home/sol/salsa-i-hate-sigverify/programs/zk-elgamal-proof" }
